--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       Coded by <a href="https://www.linkedin.com/in/putu-bajra-39a212b0/" target="_blank">Bajra</a>.
     </div>
   </footer>
+  <div class="toast">
+    <div class="toast__content">
+      Please select a rating to submit!
+    </div>
+  </div>
   <script src="./main.js"></script>
 </body>
 </html>
